--- a/app/globals.css
+++ b/app/globals.css
@@ -34,6 +34,8 @@ body,
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
 
+    --b-accent: 187, 69%, 39%;
+
     --border: 0 0% 89.8%;
     --input: 0 0% 89.8%;
     --ring: 0 0% 3.9%;
@@ -65,6 +67,8 @@ body,
 
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 0 0% 98%;
+
+    --b-accent: 187, 69%, 39%;
 
     --border: 0 0% 14.9%;
     --input: 0 0% 14.9%;
